don't use APIs marked for removal or deprecated ones